add spirograph animation, add second canvas to allow static and changing animation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title>Page Title</title>
     </head>
     <body>
-        <canvas id="canvas" width="800" height="800" style="border: 1px black solid"></canvas>
+        <canvas id="canvas-static" width="800" height="800" style="border: 1px black solid; position:absolute; top:5px; left:5px"></canvas>
+        <canvas id="canvas-refreshing" width="800" height="800" style="border: 1px black solid; position:absolute; top:5px; left:5px"></canvas>
         <script src="simple_generator.js"></script>
     </body>
 </html>
