add number sample points input

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 200h
 50h
 20e</textarea>
+            <input id="sample-points" type="text" placeholder="# sample points"/>
+            
             <button id="start-animation">Start</button>
         </div>
 
