add separate draw completely button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             <label for="end-segment">End segment degrees</label>
             <input id="end-segment" type="number" value="720"/>
             
-            <button id="start-animation">Draw</button>
+            <button id="start-animation">Animate</button>
+            <button id="draw-completely">Show</button>
         
             <label for="center-lat-long" title="Comma separated latitude and longitude of center in decimal notation">Lat, Long</label>
             <input id="center-lat-long" value="30.506010,-98.818144"/>
