add speed selector, start and end segment inputs, clean up old functions

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
             <label for="end-segment">End segment degrees</label>
             <input id="end-segment" type="number" value="720"/>
             
+			<select id="draw-speed">
+			  <option value="10">Slow</option>
+			  <option value="5">Medium</option>
+			  <option value="1">Fast</option>
+			</select> 
+
             <button id="start-animation">Animate</button>
             <button id="draw-completely">Show</button>
         
