fix bug in lat/long input parsing

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
                 <label for="altitude" title="Actual altitude is controlled by 'default altitude' in Autopilot">Altitude* (meters)
                     <input id="altitude" type="number" value='50'/>
                 </label>
-                
-                <button id="make-kml" title="Generates kml in absolute altitude mode">KML</button>
+                <button id="make-kml" title="Generates kml in relatvieToGround altitude mode">KML</button>
                 <button id="make-csv" title="Generates csv. Recommended for FlyLitchi as csv altitude mode is relative to start point">CSV</button>
             </div>
         </div>
