Add better explanation of how tool is based on SpirographN

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <label for="altitude" title="Actual altitude is controlled by 'default altitude' in Autopilot">Altitude* (meters)
                             <input id="altitude" type="number" value='50'/>
                         </label>
-                        <button id="make-kml" title="Generates kml in relatvieToGround altitude mode">KML</button>
+                        <button id="make-kml" title="Generates kml in relativeToGround altitude mode">KML</button>
                         <button id="make-csv" title="Generates csv. Recommended for FlyLitchi as csv altitude mode is relative to start point">CSV</button>
                     </div>
                 </div>
@@ -77,7 +77,13 @@
         </div>
           
         <div class="footer">
-            <a href="https://github.com/parkertimmins/dronograph" target="_blank">code & docs</a>
+            <div>Checkout out the
+                <a href="https://github.com/parkertimmins/dronograph" target="_blank">README</a>
+                to learn how to use Dronongraph
+            </div>
+            <div>This tool is based on
+                <a href="http://www.seedcode.com/SpirographN/sgn.html" target="_blank">SpirographN</a>
+            </div>
         </div>
 
         <script src="simple_generator.js"></script>
